removed AppointmentForm component from Landing component and added AppointmentScheduler component. Removed overflow and landing background from styling. Fixed landing-container height to fit 100% of viewport width.

--- a/src/components/landing/landing.styles.scss
+++ b/src/components/landing/landing.styles.scss
@@ -1,36 +1,25 @@
 .landing-container {
   width: 100%;
-  height: 97vh;
+  height: 93vh;
   //   display: block;
   //   background-color: lightblue;
-  scrollbar-width: none;
+  // scrollbar-width: none;
   position: relative;
-
-  .landing-background {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-
-    // background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    //   url(../../assets/barbershop-landing1.jpeg);
-    // background-size: cover;
-    // background-position: center center;
-    // background-repeat: no-repeat;
-    // z-index: -1;
-  }
 
   .landing {
     height: 100%;
     display: flex;
     flex-flow: row wrap;
-    overflow-y: auto;
+    // overflow-y: auto;
     justify-content: center;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     .welcome {
       padding-right: 16.6vw;
-      margin: 1.75em auto;
+      margin: 1.75em auto 0.75em;
       text-align: center;
       font-size: 3.5em;
       font-family: "Montserrat", sans-serif;
@@ -46,9 +35,6 @@
         color: yellow;
         // color: white;
         margin: 0;
-      }
-
-      .crown {
       }
     }
   }
